src/test/ui/reachable/expr_cast.stderr
error: unreachable expression
  --> $DIR/expr_cast.rs:20:13
   |
20 |     let x = {return} as !; //~ ERROR unreachable
   |             ^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/expr_cast.rs:14:9
   |
14 | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to previous error

